--- a/css/stylesheets/application.css
+++ b/css/stylesheets/application.css
@@ -274,6 +274,7 @@ tr.issue.idnt-8 td.subject {padding-left: 136px; background-position: 120px 50%;
 tr.issue.idnt-9 td.subject {padding-left: 152px; background-position: 136px 50%;}
 
 table.issue-report {table-layout:fixed;}
+table.issue-report-auto {table-layout:auto;}
 
 tr.entry { border: 1px solid #f8f8f8; }
 tr.entry td { white-space: nowrap; }
@@ -332,7 +333,7 @@ table.plugins span.name { font-weight: bold; display: block; margin-bottom: 6px;
 table.plugins span.description { display: block; font-size: 0.9em; }
 table.plugins span.url { display: block; font-size: 0.9em; }
 
-table.list.enumerations {table-layout: fixed; margin-bottom: 2em;}
+table.list.enumerations {table-layout: auto; margin-bottom: 2em;}
 
 tr.group td { padding: 0.8em 0 0.5em 0.3em; border-bottom: 1px solid #ccc; text-align:left; background-color: #fff;}
 tr.group span.name {font-weight:bold;}
@@ -880,7 +881,7 @@ z-index:100;
 opacity: 0.5;
 }
 
-html>body #ajax-indicator { position: fixed; }
+html>body #ajax-indicator { position: auto; }
 
 #ajax-indicator span {
 background-position: 0% 40%;
@@ -1475,3 +1476,5 @@ color: #555; text-shadow: 1px 1px 0 #fff;
   height:1px;
   overflow:hidden;
 }
+
+
