--- a/css/themes/schott/stylesheets/application.css
+++ b/css/themes/schott/stylesheets/application.css
@@ -552,6 +552,20 @@ button.ui-corner-all {
 	min-height: initial;
 }
 
+.painel {
+
+  background-image: -webkit-linear-gradient(top, #81F781, #31B404);
+  background-image: -moz-linear-gradient(top, #81F781, #31B404);
+  background-image: -ms-linear-gradient(top, #81F781, #31B404);
+  background-image: -o-linear-gradient(top, #81F781, #31B404);
+  background-image: linear-gradient(to bottom, #81F781, #31B404);
+  background: rgba(76, 175, 80, 0.3);
+  font-size: 13px;
+  padding: 3px 8px 3px 8px;
+  border: solid #c3c7c9 0.5px;
+ 
+}
+
 .confirm {
 	background-color:#3f9af5;
 	-moz-border-radius:5px;
@@ -595,10 +609,10 @@ button.ui-corner-all {
   color: black;
 }
 .btnstyle:link {
-   color: blue;
+  color: blue;
 }
 .btnstyle:visited {
-    color: black;
+  color: black;
 }
 
  
