--- a/css/themes/schott/stylesheets/application.css
+++ b/css/themes/schott/stylesheets/application.css
@@ -566,6 +566,35 @@ button.ui-corner-all {
  
 }
 
+.painelAttention {
+
+  background-image: -webkit-linear-gradient(top, #81F781, #31B404);
+  background-image: -moz-linear-gradient(top, #81F781, #31B404);
+  background-image: -ms-linear-gradient(top, #81F781, #31B404);
+  background-image: -o-linear-gradient(top, #81F781, #31B404);
+  background-image: linear-gradient(to bottom, #81F781, #31B404);
+  background: rgba(250, 250, 210, 0.3);
+  font-size: 13px;
+  padding: 3px 8px 3px 8px;
+  border: solid #c3c7c9 0.5px;
+ 
+}
+
+.painelConfirm{
+
+  background-image: -webkit-linear-gradient(top, #81F781, #31B404);
+  background-image: -moz-linear-gradient(top, #81F781, #31B404);
+  background-image: -ms-linear-gradient(top, #81F781, #31B404);
+  background-image: -o-linear-gradient(top, #81F781, #31B404);
+  background-image: linear-gradient(to bottom, #81F781, #31B404);
+  background: rgba(76, 175, 80, 0.3);
+  font-size: 13px;
+  padding: 3px 8px 3px 8px;
+  border: solid #c3c7c9 0.5px;
+ 
+}
+
+
 .confirm {
 	background-color:#3f9af5;
 	-moz-border-radius:5px;
